# lightnovel

./: .gitignore  LICENSE  README.md  markov.py  pyproject.toml  random_novel.py  scrape.py
