[tool.poetry]
name = "lightnovel"
version = "0.1.0"
description = "Scrapes light novel titles and creates random new titles using Markov chains."
authors = ["Alex The JPEG <alexthejpeg@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
beautifulsoup4 = "^4.11.2"
markovify = "^0.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
